--- a/assets/style.css
+++ b/assets/style.css
@@ -54,14 +54,33 @@ body {
 
 header {
   width: 100%;
-  height: 20%;
   margin: 20px auto;
   padding: 20px;
-
+  /*Creating the flex container for the figure to make it reactive to display size.*/
+  display: flex;
+  flex-direction: column;
 }
-#main-head {
+
+/*Tying the size of the figure with the size of the display.*/
+header figure {
   width: 100%;
-  padding-top: 20%;
+  bottom: 0;
+}
+
+/*Creating the yellow circle with oversized image of name.*/
+#name-bubble {
+  width: 130px;
+  height: 130px;
+  background-color: var(--yellow);
+  border-radius: 50%;
+}
+
+#main-head {
+  width: 300%;
+  margin-top: 42%;
+  
+  
+
 }
 
 /*Setting the layout for the tablet grid*/
