--- a/assets/style.css
+++ b/assets/style.css
@@ -96,9 +96,9 @@ header figure {
 #main-head {
   width: 300%;
   margin-top: 42%;
-  
 }
 
+/*Turned main-nav container into grid.*/
 .main-nav {
   width: 100%;
   margin: 20px auto;
@@ -111,6 +111,31 @@ header figure {
     ". resume-bubble"
     "portfolio ."
     ". contact-bubble";
+}
+
+/*Tying width size of children to the parent.*/
+.main-nav div {
+  width: 50%;
+}
+
+#nav-header {
+  width: 100%;
+}
+
+.main-nav h2 {
+  font-style: italic;
+
+}
+
+#my-photo figure {
+  width: 100%;
+}
+
+#resize {
+  width: 170px;
+  height:auto;
+  border-radius: 50%;
+  margin-bottom: -15%;
 }
 
 /*Setting the layout for the tablet grid*/
