--- a/assets/style.css
+++ b/assets/style.css
@@ -119,7 +119,7 @@ header figure {
 }
 
 #nav-header {
-  width: 100%;
+  width: 80%;
 }
 
 .main-nav h2 {
@@ -137,6 +137,23 @@ header figure {
   border-radius: 50%;
   margin-bottom: -15%;
 }
+
+#about-bubble {
+  width: 220px;
+  height: 220px;
+  border-radius: 50%;
+  background-color: var(--peach);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+#about-bubble img {
+  width: 120px;
+  height:auto;
+}
+
 
 /*Setting the layout for the tablet grid*/
 @media screen and (min-width: 480px) {
