--- a/assets/style.css
+++ b/assets/style.css
@@ -109,7 +109,7 @@ header figure {
     "nav-header nav-header"
     "about-bubble my-photo"
     ". resume-bubble"
-    "portfolio ."
+    "works-bubble ."
     ". contact-bubble";
 }
 
@@ -154,6 +154,53 @@ header figure {
   height:auto;
 }
 
+#resume-bubble {
+  width: 180px;
+  height: 180px;
+  border-radius: 50%;
+  background-color: var(--blue);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+#resume-bubble img {
+  width: 120px;
+  height:auto;
+}
+
+#works-bubble {
+  width: 180px;
+  height: 180px;
+  border-radius: 50%;
+  background-color: var(--navy);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+#works-bubble img {
+  width: 120px;
+  height:auto;
+}
+
+#contact-bubble {
+  width: 180px;
+  height: 180px;
+  border-radius: 50%;
+  background-color: var(--yellow);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+#contact-bubble img {
+  width: 120px;
+  height:auto;
+}
 
 /*Setting the layout for the tablet grid*/
 @media screen and (min-width: 480px) {
