--- a/assets/style.css
+++ b/assets/style.css
@@ -69,8 +69,8 @@ header figure {
 
 /*Creating the yellow circle with oversized image of name.*/
 #name-bubble {
-  width: 130px;
-  height: 130px;
+  width: 160px;
+  height: 160px;
   background-color: var(--yellow);
   border-radius: 50%;
 }
@@ -87,7 +87,7 @@ header figure {
   padding: 20px;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 0.3fr 1fr 1fr;
+  grid-template-rows: 0.5fr 1fr 1fr 1fr;
 }
 
 /*Tying width size of children to the parent.*/
@@ -101,7 +101,7 @@ header figure {
   grid-row: 1;
   
 }
-
+/*Styled the font for the nav header.*/
 .main-nav h2 {
   font-style: italic;
 
@@ -139,7 +139,7 @@ header figure {
   justify-content: center;
   grid-column: 1;
   grid-row: 2;
-  align-self: end;
+  margin-left: 20%;
   z-index: 1;
 }
 
@@ -159,8 +159,8 @@ header figure {
   justify-content: center;
   grid-column: 2;
   grid-row: 3;
-  margin-top: -25%;
-  margin-left: -55%;
+  margin-top: -50%;
+  margin-left: -60%;
   z-index: 2;
 }
 
@@ -180,19 +180,19 @@ header figure {
   justify-content: center;
   grid-column: 1;
   grid-row: 3;
-  margin-top: 0%;
-  margin-left: 0;
+  margin-top: -10%;
+  margin-left: -17%;
   z-index: 3;
 }
 
 #works-bubble img {
-  width: 170px;
+  width: 190px;
   height:auto;
 }
 
 #contact-bubble {
-  width: 180px;
-  height: 180px;
+  width: 250px;
+  height: 250px;
   border-radius: 50%;
   background-color: var(--yellow);
   display: flex;
@@ -200,14 +200,14 @@ header figure {
   align-items: center;
   justify-content: center;
   grid-column: 2;
-  grid-row: 3;
-  margin-top: 0%;
-  margin-left: 0%;
+  grid-row: 4;
+  margin-top: -45%;
+  margin-left: -5%;
   z-index: 5;
 }
 
 #contact-bubble img {
-  width: 120px;
+  width: 160px;
   height:auto;
 }
 
