--- a/assets/style.css
+++ b/assets/style.css
@@ -60,7 +60,7 @@ body {
 
 header {
   width: 100%;
-  margin: 20px;
+  margin: 20px auto;
   padding: 20px;
   /*Creating the flex container for the figure to make it reactive to display size.*/
   display: flex;
@@ -89,7 +89,7 @@ header figure {
 /*Turned main-nav container into grid.*/
 .main-nav {
   width: 100%;
-  margin: 20px;
+  margin: 20px auto;
   padding: 20px;
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -251,11 +251,49 @@ header figure {
 }
 
 #work1 {
+  width: 250px;
+  height: 250px;
   grid-column: 1;
   grid-row: 1;
-  margin-top: 0;
-  margin-left: 0;
+  margin-top: 0%;
+  margin-left: 0%;
   z-index: 1;
+}
+
+#work2 {
+  width: 200px;
+  height: 200px;
+  grid-column: 2;
+  grid-row: 1;
+  margin-top: 0%;
+  margin-left: 0%;
+}
+
+#work3 {
+  width: 190px;
+  height: 190px;
+  grid-column: 1;
+  grid-row: 2;
+  margin-top: 0%;
+  margin-left: 0%;
+}
+
+#work4 {
+  width: 220px;
+  height: 220px;
+  grid-column: 2;
+  grid-row: 2;
+  margin-top: 0%;
+  margin-left: 0%;
+}
+
+#work5 {
+  width: 240px;
+  height: 240px;
+  grid-column: 2;
+  grid-row: 3;
+  margin-top: 0%;
+  margin-left: 0%;
 }
 
 /* || Contact Section */
@@ -263,7 +301,7 @@ header figure {
 /*Adding the background colour and basic stying to contact section.*/
 .contact {
   width: 100%;
-  margin: 20px;
+  margin: 20px auto;
   padding: 20px;
   padding-right: 40px;
   background-color: var(--yellow);
