Positioned the elements in <my-work> grid and assigned z-index to them.

--- a/assets/style.css
+++ b/assets/style.css
@@ -236,7 +236,7 @@ header figure {
 /*Creates a grid in the section to position bubbles with links to applications or placeholder images.*/
 .work {
   width: 100%;
-  margin: 20px;
+  margin: 20px auto;
   padding: 20px;
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -255,9 +255,9 @@ header figure {
   height: 250px;
   grid-column: 1;
   grid-row: 1;
-  margin-top: 0%;
-  margin-left: 0%;
-  z-index: 1;
+  margin-bottom: 0%;
+  margin-left: 9%;
+  z-index: 5;
 }
 
 #work2 {
@@ -265,8 +265,9 @@ header figure {
   height: 200px;
   grid-column: 2;
   grid-row: 1;
-  margin-top: 0%;
-  margin-left: 0%;
+  margin-top: 18%;
+  margin-left: -7%;
+  z-index: 4;
 }
 
 #work3 {
@@ -274,8 +275,9 @@ header figure {
   height: 190px;
   grid-column: 1;
   grid-row: 2;
-  margin-top: 0%;
-  margin-left: 0%;
+  margin-top: -5%;
+  margin-left: 31%;
+  z-index: 3;
 }
 
 #work4 {
@@ -283,17 +285,19 @@ header figure {
   height: 220px;
   grid-column: 2;
   grid-row: 2;
-  margin-top: 0%;
-  margin-left: 0%;
+  margin-top: 11%;
+  margin-left: -10%;
+  z-index: 2;
 }
 
 #work5 {
   width: 240px;
   height: 240px;
-  grid-column: 2;
+  grid-column: 1;
   grid-row: 3;
-  margin-top: 0%;
-  margin-left: 0%;
+  margin-top: -5%;
+  margin-left: 38%;
+  z-index: 1;
 }
 
 /* || Contact Section */
