--- a/assets/style.css
+++ b/assets/style.css
@@ -247,7 +247,15 @@ header figure {
   width: 250px;
   height: 250px;
   border-radius: 50%;
-  background-color: var(--navy);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+/* Img opacity used together with the :hover selector to change the opacity on mouse-over:*/
+.work-bubble img {
+  width: 100%;
+  border-radius: 50%;
+  opacity: 0.8;
 }
 
 #work1 {
