--- a/assets/style.css
+++ b/assets/style.css
@@ -105,8 +105,8 @@ nav div {
   width: 80%;
   grid-column: 1 / span 2;
   grid-row: 1;
-  
 }
+
 /*Styled the font for the nav header.*/
 #main-nav h2 {
   font-style: italic;
@@ -397,14 +397,122 @@ footer {
 
 /*Setting the layout for the tablet grid*/
 @media screen and (min-width: 480px) {
-  body {
-    grid-template-columns: 1fr 2fr;
-    grid-template-areas: 
-        "header header"
-        "nav about"
-        "work work"
-        "contact contact"
-        "footer footer";
+  #main-nav {
+    width: 100%;
+     /*Changed value.*/
+    margin: 0 auto;
+    padding: 20px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 0.5fr 1fr 1fr 1fr;
+  }
+  
+  /*Tying width size of children to the parent.*/
+  nav div {
+    width: 100%;
+  }
+  
+  #nav-header {
+    width: 80%;
+    grid-column: 1 / span 2;
+    grid-row: 1;
+  }
+
+  #main-nav h2 {
+    font-style: italic;
+    font-size: 1.6em;
+  }
+
+  #my-photo {
+    grid-column: 2;
+    grid-row: 2;
+    /*Changed value.*/
+    margin-top: 0%;
+    margin-left: 0%;
+    z-index: 4;
+  }
+
+  #my-photo figure {
+    width: 100%;
+  }
+  
+  #my-photo img {
+     /*Changed value.*/
+    width: 300px;
+    height:auto;
+    border-radius: 50%;
+  }
+
+  #about-bubble {
+    width: 230px;
+    height: 230px;
+    border-radius: 50%;
+    background-color: var(--peach);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    grid-column: 1;
+    grid-row: 2;
+    /*Changed value.*/
+    margin-top: 20%;
+    margin-left: 40%;
+    z-index: 1;
+  }
+  
+  #resume-bubble {
+     /*Changed value.*/
+    width: 200px;
+    height: 200px;
+
+    border-radius: 50%;
+    background-color: var(--blue);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    grid-column: 2;
+    grid-row: 3;
+    /*Changed value.*/
+    margin-top: -15%;
+    /*Changed value.*/
+    margin-left: -20%;
+    z-index: 2;
+  }
+  
+  #works-bubble {
+    width: 330px;
+    height: 330px;
+    border-radius: 50%;
+    background-color: var(--navy);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    grid-column: 1;
+    grid-row: 3;
+    /*Changed value.*/
+    margin-top: 10%;
+    /*Changed value.*/
+    margin-left: 0%;
+    z-index: 3;
+  }
+  
+  #contact-bubble {
+    width: 250px;
+    height: 250px;
+    border-radius: 50%;
+    background-color: var(--yellow);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    grid-column: 2;
+    grid-row: 4;
+    /*Changed value.*/
+    margin-top: -15%;
+    margin-left: -5%;
+    z-index: 5;
   }
 }
 
