--- a/assets/style.css
+++ b/assets/style.css
@@ -244,8 +244,6 @@ nav div {
 }
 
 .work-bubble {
-  width: 250px;
-  height: 250px;
   border-radius: 50%;
   display: flex;
   justify-content: center;
@@ -395,16 +393,11 @@ footer {
 
 /* || Media Queries */
 
-/*Setting the layout for the tablet grid*/
+/*Setting the layout for the nav and work tablet grids*/
 @media screen and (min-width: 480px) {
   #main-nav {
-    width: 100%;
      /*Changed value.*/
     margin: 0 auto;
-    padding: 20px;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 0.5fr 1fr 1fr 1fr;
   }
   
   /*Tying width size of children to the parent.*/
@@ -412,108 +405,162 @@ footer {
     width: 100%;
   }
   
-  #nav-header {
-    width: 80%;
-    grid-column: 1 / span 2;
-    grid-row: 1;
-  }
-
   #main-nav h2 {
-    font-style: italic;
     font-size: 1.6em;
   }
 
   #my-photo {
-    grid-column: 2;
-    grid-row: 2;
     /*Changed value.*/
     margin-top: 0%;
     margin-left: 0%;
-    z-index: 4;
-  }
-
-  #my-photo figure {
-    width: 100%;
   }
   
   #my-photo img {
      /*Changed value.*/
     width: 300px;
-    height:auto;
-    border-radius: 50%;
   }
 
   #about-bubble {
-    width: 230px;
-    height: 230px;
-    border-radius: 50%;
-    background-color: var(--peach);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    grid-column: 1;
-    grid-row: 2;
     /*Changed value.*/
     margin-top: 20%;
     margin-left: 40%;
-    z-index: 1;
   }
   
   #resume-bubble {
      /*Changed value.*/
     width: 200px;
     height: 200px;
-
-    border-radius: 50%;
-    background-color: var(--blue);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    grid-column: 2;
-    grid-row: 3;
     /*Changed value.*/
     margin-top: -15%;
     /*Changed value.*/
     margin-left: -20%;
-    z-index: 2;
   }
   
   #works-bubble {
-    width: 330px;
-    height: 330px;
-    border-radius: 50%;
-    background-color: var(--navy);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    grid-column: 1;
-    grid-row: 3;
     /*Changed value.*/
     margin-top: 10%;
     /*Changed value.*/
     margin-left: 0%;
-    z-index: 3;
   }
   
   #contact-bubble {
-    width: 250px;
-    height: 250px;
-    border-radius: 50%;
-    background-color: var(--yellow);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    grid-column: 2;
-    grid-row: 4;
+
     /*Changed value.*/
     margin-top: -15%;
     margin-left: -5%;
+  }
+
+
+  #work {
+    width: 100%;
+     /*Changed value.*/
+    margin: 0 auto;
+    margin-top: 100px;
+    padding: 20px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+  }
+  
+  .work-bubble {
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+  }
+  /* Img opacity used together with the :hover selector to change the opacity on mouse-over:*/
+  .work-bubble img {
+    width: 100%;
+    border-radius: 50%;
+    opacity: 0.6;
+  }
+  
+  .work-bubble a {
+    position: absolute;
+     /*Changed value.*/
+    font-size: 2em;
+    font-weight: bold;
+    z-index: 6;
+  }
+  
+  #work1 {
+     /*Changed value.*/
+    width: 400px;
+    height: 400px;
+
+    grid-column: 1;
+    grid-row: 1;
+    /*Changed value.*/
+    margin-top: 0%;
+    margin-left: 15%;
+  
     z-index: 5;
   }
+  
+  #work2 {
+     /*Changed value.*/
+    width: 270px;
+    height: 270px;
+
+    grid-column: 2;
+    grid-row: 1;
+     /*Changed value.*/
+    margin-top: 58%;
+    margin-left: -7%;
+
+    z-index: 4;
+  }
+  
+  #work3 {
+     /*Changed value.*/
+    width: 250px;
+    height: 250px;
+
+    grid-column: 1;
+    grid-row: 2;
+     /*Changed value.*/
+    margin-top: 5%;
+    margin-left: 40%;
+
+    z-index: 3;
+  }
+  
+  #work4 {
+     /*Changed value.*/
+    width: 300px;
+    height: 300px;
+
+    grid-column: 2;
+    grid-row: 2;
+    margin-top: 31%;
+    margin-left: -20%;
+    z-index: 2;
+  }
+  
+  #work5 {
+     /*Changed value.*/
+    width: 370px;
+    height: 370px;
+
+    grid-column: 1;
+    grid-row: 3;
+     /*Changed value.*/
+    margin-top: -10%;
+    margin-left: 38%;
+    z-index: 1;
+  }
+  
+  .work-bubble img:hover {
+    opacity: 1.0;
+    z-index: 5;
+  }
+  
+  .work-bubble a:hover {
+     /*Changed value.*/
+    font-size: 2.5em;
+  }
+  
 }
 
 /*Setting the layout for the desktop grid*/
