Changed the h1 and h2 properties and removed h2 from about section.

--- a/assets/style.css
+++ b/assets/style.css
@@ -11,7 +11,7 @@
 }
 
 * {
-    font-family: Helvetica, Arial,  sans-serif;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 
@@ -112,7 +112,7 @@ nav div {
 
 /*Styled the font for the nav header.*/
 #main-nav h2 {
-  font-style: italic;
+  font-weight: 300;
   font-size: 1.2em;
 }
 
