Revised and removed unnecessary elements from html file.

--- a/assets/style.css
+++ b/assets/style.css
@@ -32,7 +32,7 @@ header {
   grid-area: contact;
 }
 
-/*Setting up the layout for the mobile grid.*/
+/*Setting up a rid layout for the mobile display.*/
 body {
   display: grid;
   gap: 20px;
@@ -235,11 +235,7 @@ nav div {
   margin-left: -10px;
 }
 
-#about h2 {
-  font-size: 1.5em;
-}
-
-#about div {
+#about-content {
   padding-left: 40px;
 }
 
